# numberbox

./: README.md  setup.cfg
.github/workflows/: main.yml
examples/: basic.py  basic_example.py
numberbox/: __init__.py
numberbox/core/: box.py  layer.py
parchment/: __init__.py
parchment/core/: __init__.py  block.py  grid.py  row.py
parchments/core/: block.py  debug.py  grid.py  period.py  row.py  value.py
parchments/test/: test_period.py  test_project.py
parchments/tests/: grid_tests.py
