[metadata]
# replace with your username:
name = Parchment
version = 0.0.1
author = Nathan Johnson
author_email = drugen@gmail.com
description = A grid based financial tool for generating easy to use dictionary objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6